# MotionFlowPriorityGraphSensors

./: .cproject  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  SUMMARY.md  addsubmodules.sh  build.py  build.sh  copybuild.sh  datasets  datasets_afs_link  datasets_tuebingen  libs-install  libusb.sh  prepare_tree.sh  scratch_build.py  tree.txt  try.csv  vtdRunScp.sh  vtdSendandReceive.sh  vtdStartandReceive.sh  vtdStop.sh
disparityfilter/DisparityToDepth/: CMakeLists.txt
kitti_eval/devkit_stereo_opticalflow_sceneflow/cpp/: CMakeLists.txt
project/: CMakeLists.txt  Disparity.cpp  MemoryImage.cpp  main.cpp
project/BA_marcel/: Zeitplan
project/BA_marcel/CPP/: CMakeLists.txt  main.cpp
project/BA_marcel/Final/: Evaluation.m  FastMovement.avi  GenericMain.m  Initialization.m  estimatedMovement.m  evalCPP.m  experiment.m  flowCollision.m  gtCollision.m  gtMovement.m  imageGenerator.m  kittiPlotter.m  loadPath.m  main.m  movement.m  plotter.m
project/BA_marcel/Videos/: Movement.avi
project/BA_marcel/Vires/: Eval.m  Flow.m  GroundTruth.m  viresPlotter.m
project/BA_marcel/cppHelper/: readCppFlow.m  x.txt  y.txt
project/VTD/: CMakeLists.txt
project/carla_python/: my_client_carla.py  my_client_carla_extra.py
project/carla_tutorials/: CMakeLists.txt  example.py  manual_control.py  my_client_carla.py  position_vires_00.yml  test_client.py  vires_header.h
project/cmake/: CMakePrintConfig.cmake
project/cmake-tutorial/: CMakeLists.txt  TutorialConfig.h.in
project/cmake_tutorial/: CMakeLists.txt
project/cpp-tutorials/: Arrays.cpp  Arrays.h  CMakeLists.txt  Constructor.h  Constuctor.cpp  Friend.cpp  Friend.h  Introduction.h  Larger.h  OperatorOverload.cpp  OperatorOverload.h  Overload.cpp  Overload.h  Pointers.cpp  Pointers.h  Random.cpp  Template.cpp  Template.h  Typedefs.cpp  Typedefs.h  Virtual.cpp  Virtual.h  bigO.cpp  collection.cpp  collection.h  filesystem.cpp  main.cpp  temp
project/cpp_tutorials/: Arrays.cpp  CMakeLists.h  CMakeLists.txt  ClassNamespace.cpp  ClassTutorials.cpp  ClassTutorials.h  Introduction.h  Larger.cpp  Overload.h  SaveBinaryFile.cpp  Template.h  bigO.cpp  boost_try.cpp  filesystem.cpp  main.cpp  namespace.h  random.cpp  regex.cpp  sort.cpp  sort_all.cpp
project/gnuplot-tutorials/: CMakeLists.txt  Introduction.h  demo1.ps  main.cpp
project/gnuplot_tutorials/: CMakeLists.txt  Introduction.h  example-data-1d.cc  example-interactive.cc  main.cpp  send2d.cpp
project/kalman_tutorials/: kalman-test.cpp  kalman.cpp  kalman.hpp
project/kitti-tutorials/: Introduction.h
project/kitti_tutorials/: Introduction.h
project/main/: AlgorithmFlow.cpp  AlgorithmFlow.h  BasicObjects.cpp  BasicObjects.h  BirdView.cpp  BirdView.h  CMakeLists.txt  CameraSensorImage.cpp  CameraSensorImage.h  Canvas.cpp  Canvas.h  CppObjects.cpp  CppObjects.h  DataProcessingAlgorithm.cpp  DataProcessingAlgorithm.h  Dataset.cpp  Dataset.h  FlowImageExtended.cpp  FlowImageExtended.h  GenerateCppObjects.cpp  GenerateCppObjects.h  GenerateGroundTruthScene.cpp  GenerateGroundTruthScene.h  GenerateGroundTruthSceneExternal.cpp  GenerateGroundTruthSceneInternal.cpp  GenerateViresObjects.cpp  GenerateViresObjects.h  GridLayout.cpp  GridLayout.h  GroundTruth.cpp  GroundTruth.h  GroundTruthFlow.cpp  GroundTruthFlow.h  GroundTruthObjects.cpp  GroundTruthObjects.h  GroundTruthScene.cpp  GroundTruthScene.h  GroundTruthSceneExternal.cpp  GroundTruthSceneInternal.cpp  InputOutput.cpp  (+111 more)
project/main_python/: CMakeLists.txt  Figures.py  PlotData.py  SensorDataPlot.py  YAMLParser.py  image_stich.py  main.py  motionflow_graphs.py  motionflow_graphs_common.py  motionflow_graphs_data.py  my_client_carla.py  pixel_robustness.py  plot_displacement_3d.py  robustness.py  robustness_common.py  scratch.py  values.yml  values_cpp_1_30.yml  values_vires_25_55.yml  vector_robustness.py
project/makefile-tutorials/: Makefile
project/matlab/: colorFunc.m  coloring.m  func_rbk77_bf_signalprocessing.m  readme.txt
project/opencl_tutorials/: CMakeLists.txt
project/opencv-tutorials/: CMakeLists.txt  CvError.h  CvMat.cpp  CvMat.h  Disparity.cpp  DisplayImage.cpp  Introduction.h  OpticalFlow.cpp  VideoCapture.py  draw.cpp  filterOperations.cpp  hello.cpp  hello.h  imageOperations.cpp  main.cpp  matOperations.cpp  maths.cpp
project/opencv_samples/: CMakeLists.txt  main.cpp
project/opencv_tutorials/: CMakeLists.txt  GreyImage.cpp  GreyImage.hpp  Introduction.h  birdview.cpp  camshiftdemo.cpp  chisquare.cpp  data_persistence.cpp  default.xml  draw.cpp  facePoseEstimation.cpp  filterOperations.cpp  findContours.cpp  imageOperations.cpp  kalman.cpp  main.cpp  matOperations.cpp  maths.cpp  out_camera_data.xml  pimple.cpp  scratch.cpp  trajectory.yml  tranformation.cpp  video_operations.cpp
project/opengl-tutorials/: pipeline_example.cpp
project/opengl_tutorials/: main.cpp
project/pcl_tutorials/: CMakeLists.txt  Introduction.h  convertToPCD.sh
project/python-tutorials/: basic_icurb.py  dtw.py  plot-lemniscate.py  plot.py  regexp.py  udprecv.py  usbTest.py
project/python_tutorials/: CMakeLists.txt  Introduction.py  basic.py  basic_icurb.py  comTest2.py  cv_python.py  hist  histogramm.py  matplotlib-examples.py  motionflow_graphs.py  motionflow_graphs_back.py  motionflow_graphs_common.py  motionflow_graphs_data.py  numpy_tutorials.py  plot-lemniscate.py  scribble.py  serialTest.py  serial_oscilloscope.py  statistics_qr.py  udpsend.py  values.yml
project/qt-tutorials/: LoadTextFile.qrc  README.txt  mainwindow.cpp  mainwindow.h
project/qt_tutorials/: CMakeLists.txt  Introduction.h  MyFirstWidgetQt.pro
project/raytracing-tutorials/: CMakeLists.txt  main.cpp
project/statistics-tutorials/: CMakeLists.txt  DeGroot.cpp  Introduction.h
project/statistics_tutorials/: DeGroot.cpp
project/vires_tutorials/: CMakeLists.txt  Introduction.h  RdbTrigger.cpp  ShmReader.cpp  ShmWriter.cpp  VTDSource  example.cpp  main.cpp  main.h  vires_common.cpp  vires_configuration  vtd.cpp  vtd_obselete.cpp  vtd_obselete.h
tutorials/raytracing-tutorials/: CMakeLists.txt  main.cpp
(+849 files in other folders)
